# diploma-ms

./: README.md  final_pipeline.py  model.py  model_training.ipynb  pipeline_utils.py  pyproject.toml  requirements.txt
classic_models/: acoustic-features-statistics.ipynb  classification_with_acoustic_features.ipynb
classic_models/results/: control_group_features.csv  group_comparison_results.csv  normality_test_results.csv  patient_group_features.csv
classic_models/results/.ipynb_checkpoints/: all_audio_features-checkpoint.csv
data/: audio_preprecessing.py  data-description.ipynb  get_data.py  get_labels.py  label_data.csv
