[project]
name = "diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "Anouar",email = "Anouarkh3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.0.0,<2.2.6)",
    "denoiser (>=0.1.5,<0.2.0)",
    "audiosegment (>=0.23.0,<0.24.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "statistics (>=1.0.3.5,<2.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opensmile (>=2.5.1,<3.0.0)",
    "audiofile (>=1.5.1,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
